# networks_minimal

./: CMakeLists.txt  README.md  networks_minimalConfig.cmake.in  package.xml  setup.py
examples/: a1_actuation.cpp  boxy_actuation.cpp
examples/helpers/: Actuation.hpp
examples/parameters/a1/: gru.txt  mlp.txt
examples/parameters/boxy/: gru.txt  mlp.txt
include/networks_minimal/: Activation.hpp  Config.h  GatedRecurrentUnit.hpp  MultiLayerPerceptron.hpp
scripts/: torch_export.py
scripts/helpers/: networks.py  utility.py
src/: Activation.cpp  GatedRecurrentUnit.cpp  MultiLayerPerceptron.cpp
